[tool.poetry]
name = "vllm-template"
version = "0.1.0"
description = ""
authors = ["juliekuo <tzulikuo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.10.4"
vllm = "^0.6.6.post1"
openai = "^1.58.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
